# yads-bash-software-design

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  codecov.yaml
.github/workflows/: codecov.yml  github-actions-demo.yml  github-actions.yml
scripts/: format.sh
src/: CMakeLists.txt  main.cpp
src/bash/: bash.cpp  bash.hpp  config.hpp  variables.cpp  variables.hpp
src/commands/: arguments.cpp  arguments.hpp  command.cpp  command.hpp  pipeline.hpp
src/execution/: executor.cpp  executor.hpp
src/parsing/: parse_command_and_arguments.cpp  parse_command_and_arguments.hpp  parser.cpp  parser.hpp
src/utils/: filesystem.hpp  utils.cpp  utils.hpp
test/: CMakeLists.txt
test/unit/: command.test.cpp
test/unit/bash/: bash.test.cpp
test/unit/command/: cat.test.cpp  echo.test.cpp  pwd.test.cpp
test/unit/commands/: assignment.test.cpp  cat.test.cpp  echo.test.cpp  exit.test.cpp  external.test.cpp  pwd.test.cpp  wc.test.cpp
test/unit/fixtures/: utils.hpp
test/unit/parser/: parser.test.cpp
test/unit/parsing/: parse_command_and_arguments.test.cpp  parser.test.cpp  split_commands.test.cpp  substituion.test.cpp
test/unit/test_files/: space_test  test file2  test_file1
test/unit/util/: count_lines.test.cpp  count_words.test.cpp
test/unit/utils/: count_lines.test.cpp  count_words.test.cpp
